--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">University of Texas at El Paso (U.T.E.P)</h4>
 
               <span>2007 — 2008</span>
 
