changed address to broader

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Sacramento, California, USA</address>
+              <address>Willing to Relocate</address>
             </div>
 
           </li>
