changed title formatting

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
         <div class="info-content">
           <h1 class="name" title="Luis David Davila">Luis David Davila</h1>
 
-          <p class="title">Machine Learning Engineer, Software Developer, Lifetime Learner</p>
+          <p class="title">Machine Learning Engineer</p>
+          <p class="title">Software Developer, Lifetime Learner</p>
+          <p class="title">Lifetime Learner</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
