--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
           <p class="title">Machine Learning Engineer</p>
 
-          <p class="title">Software Developer, Lifetime Learner</p>
+          <p class="title">Software Developer</p>
           
           <p class="title">Lifetime Learner</p>
         </div>
