--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What i'm doing</h3>
+          <h3 class="h3 service-title">What I can do for you</h3>
 
           <ul class="service-list">
 
