--- a/index.html
+++ b/index.html
@@ -202,18 +202,18 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            I am a computational scientist and machine learning engineer 
+            with a strong background in building scalable data pipelines,
+             developing deep learning models, and deploying algorithms on high-performance computing clusters. 
+             My expertise spans across Python, MATLAB, C/C++, and SQL, with experience in parallel computing, large-scale data analysis,
+            and modern ML frameworks such as PyTorch and TensorFlow. 
+            I enjoy tackling complex problems at the intersection of neuroscience, AI, and data engineering, 
+            translating research insights into reliable, high-performance systems. 
+            Beyond research, I am passionate about applying AI to real-world challenges in industry, from financial modeling to biotech innovation, 
+            and I thrive in environments that demand both technical rigor and creative problem-solving.
           </p>
 
-          <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
-          </p>
+
         </section>
 
 
