--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+12133522795" class="contact-link">+1 (915) 630 9759</a>
+              <a href="tel:+19156309759" class="contact-link">+1 (915) 630 9759</a>
             </div>
 
           </li>
@@ -116,7 +116,6 @@
 
             <div class="contact-info">
               <p class="contact-title">Location</p>
-
               <address>Willing to Relocate</address>
             </div>
 
@@ -527,12 +526,17 @@
 
               <h4 class="h4 timeline-item-title">University of Texas at El Paso (U.T.E.P)</h4>
 
-              <span>2007 — 2008</span>
+              <span>2018 — 2023</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                In my undergraduate I completed a Bachelor of Science in Computer Science with concentration in Data Analytics.
+                I took courses that included
+                 -Machine Learning
+                 -Data Science
+                 -Database Management Systems
+                 -Data Mining
+                 -Algorithms and Data Structures
+                 -Software Engineering
               </p>
 
             </li>
