added list format

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -517,18 +517,20 @@
 
               <h4 class="h4 timeline-item-title">University of Texas at El Paso (U.T.E.P)</h4>
 
-              <span>2018 — 2023</span>
+              <span>2018 â€” 2023</span>
 
               <p class="timeline-text">
                 In my undergraduate I completed a Bachelor of Science in Computer Science with concentration in Data Analytics.
-                I took courses that included
-                 -Machine Learning
-                 -Data Science
-                 -Database Management Systems
-                 -Data Mining
-                 -Algorithms and Data Structures
-                 -Software Engineering
+                I took courses that included:
               </p>
+              <ul class="timeline-text">
+                <li>Machine Learning</li>
+                <li>Data Science</li>
+                <li>Database Management Systems</li>
+                <li>Data Mining</li>
+                <li>Algorithms and Data Structures</li>
+                <li>Software Engineering</li>
+              </ul>
 
             </li>
 
@@ -536,7 +538,7 @@
 
               <h4 class="h4 timeline-item-title">New york academy of art</h4>
 
-              <span>2006 — 2007</span>
+              <span>2006 â€” 2007</span>
 
               <p class="timeline-text">
                 Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
@@ -549,7 +551,7 @@
 
               <h4 class="h4 timeline-item-title">High school of art and design</h4>
 
-              <span>2002 — 2004</span>
+              <span>2002 â€” 2004</span>
 
               <p class="timeline-text">
                 Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
@@ -579,7 +581,7 @@
 
               <h4 class="h4 timeline-item-title">Creative director</h4>
 
-              <span>2015 — Present</span>
+              <span>2015 â€” Present</span>
 
               <p class="timeline-text">
                 Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
@@ -593,7 +595,7 @@
 
               <h4 class="h4 timeline-item-title">Art director</h4>
 
-              <span>2013 — 2015</span>
+              <span>2013 â€” 2015</span>
 
               <p class="timeline-text">
                 Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
@@ -607,7 +609,7 @@
 
               <h4 class="h4 timeline-item-title">Web designer</h4>
 
-              <span>2010 — 2013</span>
+              <span>2010 â€” 2013</span>
 
               <p class="timeline-text">
                 Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
