--- a/index.html
+++ b/index.html
@@ -192,15 +192,7 @@
 
         <section class="about-text">
           <p>
-            I am a computational scientist and machine learning engineer 
-            with a strong background in building scalable data pipelines,
-             developing deep learning models, and deploying algorithms on high-performance computing clusters. 
-             My expertise spans across Python, MATLAB, C/C++, and SQL, with experience in parallel computing, large-scale data analysis,
-            and modern ML frameworks such as PyTorch and TensorFlow. 
-            I enjoy tackling complex problems at the intersection of neuroscience, AI, and data engineering, 
-            translating research insights into reliable, high-performance systems. 
-            Beyond research, I am passionate about applying AI to real-world challenges in industry, from financial modeling to biotech innovation, 
-            and I thrive in environments that demand both technical rigor and creative problem-solving.
+            I’m a machine learning engineer and computational scientist skilled in building scalable data pipelines, training deep learning models, and accelerating analysis on high-performance computing clusters. With expertise in Python, MATLAB, C/C++, and modern ML frameworks, I focus on turning complex data challenges into efficient, reliable solutions that drive real-world impact.
           </p>
 
 
