added more formatting

--- a/index.html
+++ b/index.html
@@ -508,12 +508,12 @@
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">University of Texas at El Paso (U.T.E.P)</h4>
+              <h4 class="h4 timeline-item-title">B.S. Computer Science - Data Analytics Concentration</h4>
 
               <span>2018 â€” 2023</span>
 
               <p class="timeline-text">
-                In my undergraduate I completed a Bachelor of Science in Computer Science with concentration in Data Analytics.
-                I took courses that included:
+                Courses Included:
               </p>
               <ul class="timeline-text">
                 <li>Machine Learning</li>
