added dashes to sub bullet points

--- a/index.html
+++ b/index.html
@@ -516,12 +516,12 @@
                 Courses Included:
               </p>
               <ul class="timeline-text">
-                <li>Machine Learning</li>
-                <li>Data Science</li>
-                <li>Database Management Systems</li>
-                <li>Data Mining</li>
-                <li>Algorithms and Data Structures</li>
-                <li>Software Engineering</li>
+                <li>-Machine Learning</li>
+                <li>-Data Science</li>
+                <li>-Database Management Systems</li>
+                <li>-Data Mining</li>
+                <li>-Algorithms and Data Structures</li>
+                <li>-Software Engineering</li>
               </ul>
 
             </li>
