replaced a lot of resume text

--- a/index.html
+++ b/index.html
@@ -522,20 +522,26 @@
                 <li>-Data Mining</li>
                 <li>-Algorithms and Data Structures</li>
                 <li>-Software Engineering</li>
+                <li>-Matrix Algebra</li>
+                <li>Calculus I, II, III</li>
               </ul>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">M.S. in Computational Science</h4>
 
-              <span>2006 — 2007</span>
+              <span>2023 — Present</span>
 
-              <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+            <p class="timeline-text">
+                Courses Included:
               </p>
+              <ul class="timeline-text">
+                <li>-Numerical Analysis</li>
+                <li>-Mathematical and Computational Modeling</li>
+                <li>-Advanced Scientific Computing</li>
+              </ul>
 
             </li>
 
