--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 
           <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
+              <ion-icon name="code-working-outline"></ion-icon>
             </div>
 
             <h3 class="h3">Experience</h3>
