--- a/index.html
+++ b/index.html
@@ -541,6 +541,8 @@
                 <li>-Numerical Analysis</li>
                 <li>-Mathematical and Computational Modeling</li>
                 <li>-Advanced Scientific Computing</li>
+                <li>-Deep Learning for Partial Differential Equations</li>
+                <li>-Statistical Programming</li>
               </ul>
 
             </li>
