--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
+                <h5 class="h5">Machine Learning</h5>
                 <data value="70">70%</data>
               </div>
 
