--- a/index.html
+++ b/index.html
@@ -513,12 +513,12 @@
 
               <span>Summer 2022</span>
 
-              <p class="timeline-text">
+              <ul class="timeline-text">
                 <li>-Used Scikit-Learn’s random forest model to predict the progression of Amyotrophic Lateral Sclerosis</li>
                 <li>-Demonstrated how many models used for drug viability are insufficient </li>
                 <li>-Trained multiple deep learning models using a High-Performance Computing cluster via Microsoft Azure, testing 5000+ hyperparameters for the models</li>
                 <li>-Utilized Python libraries such as Pandas, NumPy, Matplotlib, and Seaborn for data analysis and visualization</li>
-              </p>
+              </ul>
 
             </li>
 
