added some text

--- a/index.html
+++ b/index.html
@@ -524,15 +524,15 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Research Assistant with UTEP Brain Computation Lab</h4>
 
-              <span>2013 — 2015</span>
+              <span>2023— Present</span>
 
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
+              <ul class="timeline-text">
+                <h5 class="h5">Leadership Experience</h5>
+                <li>-Led a 3-person team to design/deploy an ML pipeline, improving processing throughput by 3900%</li>
+                <li>-Designed M.L. models to rate the quality of clusters using image processing with 70-92% accuracy</li>
+                <li>-Enhanced signal processing pipeline reliability by 19%, reducing error rates in neural data analysis</li>
 
             </li>
 
