--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vCard - Personal Portfolio</title>
+  <title>LuisDavidDavila.com</title>
 
   <!--
     - favicon
@@ -529,7 +529,7 @@
               <span>2023— Present</span>
 
               <ul class="timeline-text">
-                <h5 class="h5">Leadership Experience</h5>
+                <h5 class="h5">Technical Experience</h5>
                 <li>-Led a 3-person team to design/deploy an ML pipeline, improving processing throughput by 3900%</li>
                 <li>-Designed M.L. models to rate the quality of clusters using image processing with 70-92% accuracy</li>
                 <li>-Enhanced signal processing pipeline reliability by 19%, reducing error rates in neural data analysis</li>
