added github link

--- a/index.html
+++ b/index.html
@@ -530,6 +530,7 @@
 
               <ul class="timeline-text">
                 <h5 class="h5">Technical Experience</h5>
+                <li>Project Github: https://github.com/lddavila/clustering_neuron_spikes_with_deep_learning</li>
                 <li>-Led a 3-person team to design/deploy an ML pipeline, improving processing throughput by 3900%</li>
                 <li>-Designed M.L. models to rate the quality of clusters using image processing with 70-92% accuracy</li>
                 <li>-Enhanced signal processing pipeline reliability by 19%, reducing error rates in neural data analysis</li>
