fixed publications text

--- a/index.html
+++ b/index.html
@@ -542,9 +542,9 @@
               <h4 class="h4 timeline-item-title">Research Assistant with UTEP Brain Computation Lab</h4>
 
               <span>2023— Present</span>
-
+              <hr class="hr">
               <ul class="timeline-text">
-                <h4 class="h4 timeline-item-title">Publications</h5>
+                <h3 class="h3">PUBLICATIONS</h3>
                 <h5 class="h5">PEER REVIEWED PUBLICATIONS</h5>
                 <li>1.  Giri A, Heaton CN, Batson SA, Macias AY, Reyes NF, Salcido AA, <strong><mark>Davila LD (co-first)</mark></strong>, et al. Effect of acute alcohol consumption in a novel rodent model of decision-making. Alcohol Alcohol. 2025 Mar 25;60(3):agaf017. doi: 10.1093/alcalc/agaf017. PMID: 40229991.</li>
                 <li>2.  Dirk W. Beck, Cory N. Heaton, <strong><mark>Luis D. Davila(co-first)</mark></strong>, et al. A Decision-Space Model Explains Context-Specific Decision-Making. Will be featured by NSF. doi: https://doi.org/10.1101/2024.07.29.605535</li>
