--- a/index.html
+++ b/index.html
@@ -544,7 +544,13 @@
               <span>2023— Present</span>
               <hr class="hr">
               <ul class="timeline-text">
-                <h3 class="h3">PUBLICATIONS</h3>
+              <div class="title-wrapper">
+                <div class="icon-box">
+                  <ion-icon name="code-working-outline"></ion-icon>
+              </div>
+
+            <h3 class="h3">PUBLICATIONS</h3>
+          </div>
                 <h5 class="h5">PEER REVIEWED PUBLICATIONS</h5>
                 <li>1.  Giri A, Heaton CN, Batson SA, Macias AY, Reyes NF, Salcido AA, <strong><mark>Davila LD (co-first)</mark></strong>, et al. Effect of acute alcohol consumption in a novel rodent model of decision-making. Alcohol Alcohol. 2025 Mar 25;60(3):agaf017. doi: 10.1093/alcalc/agaf017. PMID: 40229991.</li>
                 <li>2.  Dirk W. Beck, Cory N. Heaton, <strong><mark>Luis D. Davila(co-first)</mark></strong>, et al. A Decision-Space Model Explains Context-Specific Decision-Making. Will be featured by NSF. doi: https://doi.org/10.1101/2024.07.29.605535</li>
