--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
               <ul class="timeline-text">
               <div class="title-wrapper">
                 <div class="icon-box">
-                  <ion-icon name="code-working-outline"></ion-icon>
+                  <ion-icon name="book-outline"></ion-icon>
               </div>
 
             <h3 class="h3">PUBLICATIONS</h3>
