fixed header formatting

--- a/index.html
+++ b/index.html
@@ -537,11 +537,12 @@
             </li>
 
               <li class="timeline-item">
-              
+              <div class="title-wrapper">
               <ul class="timeline-text">
               <div class="title-wrapper">
                 <div class="icon-box">
                   <ion-icon name="book-outline"></ion-icon>
+                  </div>
               </div>
 
             <h3 class="h3">PUBLICATIONS</h3>
