--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
 
             </li>
 
-              <li class="timeline-item">
+              
               <div class="title-wrapper">
               <ul class="timeline-text">
               <div class="title-wrapper">
@@ -546,6 +546,7 @@
               </div>
 
             <h3 class="h3">PUBLICATIONS</h3>
+            <li class="timeline-item"></li>
           </div>
                 <h5 class="h5">PEER REVIEWED PUBLICATIONS</h5>
                 <hr class="hr">
