--- a/index.html
+++ b/index.html
@@ -538,6 +538,8 @@
 
               
               <div class="title-wrapper">
+              <ul class="timeline-text">
+              <div class="title-wrapper">
                 <div class="icon-box">
                   <ion-icon name="book-outline"></ion-icon>
                   </div>
