--- a/index.html
+++ b/index.html
@@ -536,17 +536,13 @@
 
             </li>
 
-              
-              <div class="title-wrapper">
-              <ul class="timeline-text">
-              <div class="title-wrapper">
-                <div class="icon-box">
-                  <ion-icon name="book-outline"></ion-icon>
-                  </div>
-              </div>
-
-            <h3 class="h3">PUBLICATIONS</h3>
-            <li class="timeline-item"></li>
+<li class="timeline-item">
+  <div class="title-wrapper">
+    <div class="icon-box">
+      <ion-icon name="book-outline"></ion-icon>
+    </div>
+    <h3 class="h3">PUBLICATIONS</h3>
+  </div>
           </div>
                 <h5 class="h5">PEER REVIEWED PUBLICATIONS</h5>
                 <hr class="hr">
