undid the change

--- a/index.html
+++ b/index.html
@@ -536,13 +536,17 @@
 
             </li>
 
-<li class="timeline-item">
-  <div class="title-wrapper">
-    <div class="icon-box">
-      <ion-icon name="book-outline"></ion-icon>
-    </div>
-    <h3 class="h3">PUBLICATIONS</h3>
-  </div>
+              <li class="timeline-item">
+              <div class="title-wrapper">
+                <div class="icon-box">
+                  <ion-icon name="book-outline"></ion-icon>
+              <ul class="timeline-text">
+              <div class="title-wrapper">
+                <div class="icon-box">
+                  <ion-icon name="book-outline"></ion-icon>
+              </div>
+
+            <h3 class="h3">PUBLICATIONS</h3>
           </div>
                 <h5 class="h5">PEER REVIEWED PUBLICATIONS</h5>
                 <hr class="hr">
