changed some formatting

--- a/index.html
+++ b/index.html
@@ -535,7 +535,8 @@
                 <li>-Enhanced signal processing pipeline reliability by 19%, reducing error rates in neural data analysis</li>
 
             </li>
-
+            </section>
+            <section class="timeline">
               <li class="timeline-item">
               
               <ul class="timeline-text">
