fixed list formatting

--- a/index.html
+++ b/index.html
@@ -523,11 +523,8 @@
             </li>
 
             <li class="timeline-item">
-
               <h4 class="h4 timeline-item-title">Research Assistant with UTEP Brain Computation Lab</h4>
-
               <span>2023— Present</span>
-
               <ul class="timeline-text">
                 <li>Project Github: https://github.com/lddavila/clustering_neuron_spikes_with_deep_learning</li>
                 <li>-Led a 3-person team to design/deploy an ML pipeline, improving processing throughput by 3900%</li>
@@ -536,6 +533,8 @@
 
             </li>
             </section>
+
+            
             <section class="timeline">
               <li class="timeline-item">
               
@@ -544,9 +543,10 @@
                 <div class="icon-box">
                   <ion-icon name="book-outline"></ion-icon>
               </div>
+              </li>
 
             <h3 class="h3">PUBLICATIONS</h3>
-          </div>
+          <ol class="timeline-list">
                 <h5 class="h5"><u>PEER REVIEWED PUBLICATIONS               </u></h5>
                 <li>1.  Giri A, Heaton CN, Batson SA, Macias AY, Reyes NF, Salcido AA, <strong><mark>Davila LD (co-first)</mark></strong>, et al. Effect of acute alcohol consumption in a novel rodent model of decision-making. Alcohol Alcohol. 2025 Mar 25;60(3):agaf017. doi: 10.1093/alcalc/agaf017. PMID: 40229991.</li>
                 <li>2.  Dirk W. Beck, Cory N. Heaton, <strong><mark>Luis D. Davila(co-first)</mark></strong>, et al. A Decision-Space Model Explains Context-Specific Decision-Making. Will be featured by NSF. doi: https://doi.org/10.1101/2024.07.29.605535</li>
@@ -557,9 +557,6 @@
                 <li>2.  Salcido, Alexis A.*; Reyes, Neftali F.; Batson, Serina A.*; Macias, Andrea Y.*; Negishi, Kenichiro*; Hossain, Safa B.*; Giri, Atanu*;<strong><mark>Luis D. Davila(co-first)</mark></strong>; et al. Striosome Ghrelin interaction mediates cost-benefit decision-making state. Cell-invited.</li>
                 <h5 class="h5"><u>IN PREPARATION                           </u></h5>
                 <li>1.  <strong><mark>Luis D. Davila(co-first)</mark></strong> et al. Spike sorting with dimension selection-based clustering algorithm. In preparation Communication Biology-invited</li>
-
-            </li>
-
           </ol>
 
         </section>
