--- a/index.html
+++ b/index.html
@@ -536,27 +536,36 @@
 
             
             <section class="timeline">
-              <li class="timeline-item">
-              
-              <ul class="timeline-text">
+
               <div class="title-wrapper">
                 <div class="icon-box">
                   <ion-icon name="book-outline"></ion-icon>
               </div>
-              </li>
-
-            <h3 class="h3">PUBLICATIONS</h3>
+                <h3 class="h3">PUBLICATIONS</h3>
+              </div>
           <ol class="timeline-list">
-                <h5 class="h5"><u>PEER REVIEWED PUBLICATIONS               </u></h5>
-                <li>1.  Giri A, Heaton CN, Batson SA, Macias AY, Reyes NF, Salcido AA, <strong><mark>Davila LD (co-first)</mark></strong>, et al. Effect of acute alcohol consumption in a novel rodent model of decision-making. Alcohol Alcohol. 2025 Mar 25;60(3):agaf017. doi: 10.1093/alcalc/agaf017. PMID: 40229991.</li>
-                <li>2.  Dirk W. Beck, Cory N. Heaton, <strong><mark>Luis D. Davila(co-first)</mark></strong>, et al. A Decision-Space Model Explains Context-Specific Decision-Making. Will be featured by NSF. doi: https://doi.org/10.1101/2024.07.29.605535</li>
-                <li>3.  Ibáñez Alcalá RJ, Beck DW, Salcido AA, <strong><mark>Davila LD (co-first)</mark></strong>, et al. RECORD, a high-throughput, customizable system that unveils behavioral strategies leveraged by rodents during foraging-like decision-making. Commun Biol. 2024 Jul 6;7(1):822. doi: 10.1038/s42003-024-06489-8. PubMed PMID: 38971889; PubMed Central PMCID: PMC11227549. Featured by NSF https://new.nsf.gov/news/making-strides-understanding-decision-making</li>
-                <li>4.  Ibanez-Alcala, Rodrigo J.*; <strong><mark>Luis D. (co-first)</mark></strong>; et al. Implant for long-term electrophysiological recordings using multiple neuropixel probes. In preparation Communication Biology-invited.</li>
-                <h5 class="h5"><u>PREPRINTS/UNDER REVIEW                   </u></h5>
-                <li>1.  Lara I. Rakocevic*, <strong><mark>Luis D. Davila (co-first)</mark></strong>, et al. Computational Primitives for Cost-Benefit Decision-Making. https://www.biorxiv.org/content/10.1101/2024.12.09.627657v1 . Nature under review</li>
-                <li>2.  Salcido, Alexis A.*; Reyes, Neftali F.; Batson, Serina A.*; Macias, Andrea Y.*; Negishi, Kenichiro*; Hossain, Safa B.*; Giri, Atanu*;<strong><mark>Luis D. Davila(co-first)</mark></strong>; et al. Striosome Ghrelin interaction mediates cost-benefit decision-making state. Cell-invited.</li>
-                <h5 class="h5"><u>IN PREPARATION                           </u></h5>
-                <li>1.  <strong><mark>Luis D. Davila(co-first)</mark></strong> et al. Spike sorting with dimension selection-based clustering algorithm. In preparation Communication Biology-invited</li>
+            <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">PEER REVIEWED PUBLICATIONS</h4>
+                <ul class="timeline-text">
+                  <li>1.  Giri A, Heaton CN, Batson SA, Macias AY, Reyes NF, Salcido AA, <strong><mark>Davila LD (co-first)</mark></strong>, et al. Effect of acute alcohol consumption in a novel rodent model of decision-making. Alcohol Alcohol. 2025 Mar 25;60(3):agaf017. doi: 10.1093/alcalc/agaf017. PMID: 40229991.</li>
+                  <li>2.  Dirk W. Beck, Cory N. Heaton, <strong><mark>Luis D. Davila(co-first)</mark></strong>, et al. A Decision-Space Model Explains Context-Specific Decision-Making. Will be featured by NSF. doi: https://doi.org/10.1101/2024.07.29.605535</li>
+                  <li>3.  Ibáñez Alcalá RJ, Beck DW, Salcido AA, <strong><mark>Davila LD (co-first)</mark></strong>, et al. RECORD, a high-throughput, customizable system that unveils behavioral strategies leveraged by rodents during foraging-like decision-making. Commun Biol. 2024 Jul 6;7(1):822. doi: 10.1038/s42003-024-06489-8. PubMed PMID: 38971889; PubMed Central PMCID: PMC11227549. Featured by NSF https://new.nsf.gov/news/making-strides-understanding-decision-making</li>
+                  <li>4.  Ibanez-Alcala, Rodrigo J.*; <strong><mark>Luis D. (co-first)</mark></strong>; et al. Implant for long-term electrophysiological recordings using multiple neuropixel probes. In preparation Communication Biology-invited.</li>
+                </ul>
+            </li>
+            <li class="timeline-item"></li>
+                <h4 class="h4 timeline-item-title">PREPRINTS/UNDER REVIEW</h4>
+                <ul class="timeline-text">
+                  <li>1.  Lara I. Rakocevic*, <strong><mark>Luis D. Davila (co-first)</mark></strong>, et al. Computational Primitives for Cost-Benefit Decision-Making. https://www.biorxiv.org/content/10.1101/2024.12.09.627657v1 . Nature under review</li>
+                  <li>2.  Salcido, Alexis A.*; Reyes, Neftali F.; Batson, Serina A.*; Macias, Andrea Y.*; Negishi, Kenichiro*; Hossain, Safa B.*; Giri, Atanu*;<strong><mark>Luis D. Davila(co-first)</mark></strong>; et al. Striosome Ghrelin interaction mediates cost-benefit decision-making state. Cell-invited.</li>
+                </ul>
+              </li>
+              <li class="timeline-item">
+                <h4 class="h4">IN PREPARATION</h4>
+                <ul class="timeline-text">
+                  <li>1.  <strong><mark>Luis D. Davila(co-first)</mark></strong> et al. Spike sorting with dimension selection-based clustering algorithm. In preparation Communication Biology-invited</li>
+                </ul>
+              </li>
           </ol>
 
         </section>
@@ -572,14 +581,10 @@
           </div>
 
           <ol class="timeline-list">
-
             <li class="timeline-item">
-
               <h4 class="h4 timeline-item-title">University of Texas at El Paso (U.T.E.P)</h4>
               <h4 class="h4 timeline-item-title">B.S. Computer Science - Data Analytics Concentration</h4>
-
               <span>2018 - 2023</span>
-
               <p class="timeline-text">
                 Courses Included:
               </p>
