--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                 </ul>
               </li>
               <li class="timeline-item">
-                <h4 class="h4">IN PREPARATION</h4>
+                <h4 class="h4 timeline-item-title">IN PREPARATION</h4>
                 <ul class="timeline-text">
                   <li>1.  <strong><mark>Luis D. Davila(co-first)</mark></strong> et al. Spike sorting with dimension selection-based clustering algorithm. In preparation Communication Biology-invited</li>
                 </ul>
