added new section

--- a/index.html
+++ b/index.html
@@ -493,6 +493,38 @@
           <h2 class="h2 article-title">Resume</h2>
         </header>
 
+        <section class="timeline">
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="code-slash-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Technical Expertise</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Microsoft Research</h4>
+              <h4 class="h4 timeline-item-title">Biomedical Machine Learning Intern</h4>
+             
+
+              <span>Summer 2022</span>
+
+              <ul class="timeline-text">
+                <li>-Used Scikit-Learn’s random forest model to predict the progression of Amyotrophic Lateral Sclerosis</li>
+                <li>-Demonstrated how many models used for drug viability are insufficient </li>
+                <li>-Trained multiple deep learning models using a High-Performance Computing cluster via Microsoft Azure, testing 5000+ hyperparameters for the models</li>
+                <li>-Utilized Python libraries such as Pandas, NumPy, Matplotlib, and Seaborn for data analysis and visualization</li>
+              </ul>
+
+            </li>
+
+
+            </section>
+
           <section class="timeline">
 
           <div class="title-wrapper">
