added technical skills

--- a/index.html
+++ b/index.html
@@ -507,18 +507,22 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Microsoft Research</h4>
-              <h4 class="h4 timeline-item-title">Biomedical Machine Learning Intern</h4>
-             
-
-              <span>Summer 2022</span>
-
+              <h4 class="h4 timeline-item-title">Programming Languages:</h4>
               <ul class="timeline-text">
-                <li>-Used Scikit-Learn’s random forest model to predict the progression of Amyotrophic Lateral Sclerosis</li>
-                <li>-Demonstrated how many models used for drug viability are insufficient </li>
-                <li>-Trained multiple deep learning models using a High-Performance Computing cluster via Microsoft Azure, testing 5000+ hyperparameters for the models</li>
-                <li>-Utilized Python libraries such as Pandas, NumPy, Matplotlib, and Seaborn for data analysis and visualization</li>
+                <li>Python, MATLAB, C, C++, C#, PostgreSQL, SQL, R</li>
               </ul>
+              <h4 class="h4 timeline-item-title">Machine/Deep Learning Frameworks:</h4>
+              <ul class="timeline-text">
+                <li>MATLAB Deep Learning Toolbox, Pytorch, TensorFlow/Keras</li>
+              </ul>
+              <h4 class="h4 timeline-item-title">Data Handling/Visualization:</h4>
+              <ul class="timeline-text">
+                <li>Pandas, Matplotlib, Seaborn</li>
+              </ul>
+              <h4 class="h4 timeline-item-title">Other tools:</h4>             
+              <ul class="timeline-text">
+                <li>Github, VS Code, Jupyter</li>
+              </ul> 
 
             </li>
 
