--- a/index.html
+++ b/index.html
@@ -509,19 +509,42 @@
 
               <h4 class="h4 timeline-item-title">Programming Languages:</h4>
               <ul class="timeline-text">
-                <li>Python, MATLAB, C, C++, C#, PostgreSQL, SQL, R</li>
+                  <div class="skills">
+                    <span class="skill">Python</span>
+                    <span class="skill">MATLAB</span>
+                    <span class="skill">R</span>
+                    <span class="skill">C</span>
+                    <span class="skill">C++</span>
+                    <span class="skill">C#</span>
+                    <span class="skill">PostgreSQL</span>
+                    <span class="skill">SQL</span>
+                </div>
               </ul>
               <h4 class="h4 timeline-item-title">Machine/Deep Learning Frameworks:</h4>
-              <ul class="timeline-text">
-                <li>MATLAB Deep Learning Toolbox, Pytorch, TensorFlow/Keras</li>
+              <ul class="timeline-text"></ul>
+                <span class="skill">MATLAB Deep Learning Toolbox</span>
+                <span class="skill">Pytorch</span>
+                <span class="skill">TensorFlow/Keras</span>
+                <span class="skill">Q-Learning</span>
+                <span class="skill">Reinforcement Learning</span>
+                <span class="skill">(Un)Supervised Learning</span>
+                <span class="skill">Computer Vision</span>
               </ul>
               <h4 class="h4 timeline-item-title">Data Handling/Visualization:</h4>
               <ul class="timeline-text">
-                <li>Pandas, Matplotlib, Seaborn</li>
+                <span class="skill">Pandas</span>
+                <span class="skill">Matplotlib</span>
+                <span class="skill">Seaborn</span>
               </ul>
               <h4 class="h4 timeline-item-title">Other tools:</h4>             
               <ul class="timeline-text">
-                <li>Github, VS Code, Jupyter</li>
+                <li>Github, VS Code, Jupyter,SLURM, Linux, High Performance Computing</li>
+                <span class="skill">Github</span>
+                <span class="skill">VS Code</span>
+                <span class="skill">Jupyter</span>
+                <span class="skill">SLURM</span>
+                <span class="skill">Linux</span>
+                <span class="skill">High Performance/Distributed Computing</span>
               </ul> 
 
             </li>
