--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
           - testimonials
         -->
 
+        <!--
         <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
@@ -381,6 +382,8 @@
 
         </section>
 
+          - testimonials modal
+        -->
 
         <!--
           - testimonials modal
