--- a/index.html
+++ b/index.html
@@ -212,6 +212,21 @@
             <li class="service-item">
 
               <div class="service-icon-box">
+                <img src="./assets/images/parallel_icon.png"
+                 alt="design icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Parallel/Distributed Programming</h4>
+
+                <p class="service-item-text">
+                  Speed up existing pipelines through parallelization and optimization.
+                </p>
+              </div>
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
                 <img src="./assets/images/icon-design.svg
                 " alt="design icon" width="40">
               </div>
