--- a/index.html
+++ b/index.html
@@ -212,6 +212,22 @@
             <li class="service-item">
 
               <div class="service-icon-box">
+                <img src="./assets/images/ML Image.PNG"
+                 alt="design icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Machine Learning & A.I.</h4>
+
+                <p class="service-item-text">
+                  From reinforcement learning, to compuster vision and deep learning I can build and deploy models to suit your needs.
+                </p>
+              </div>
+            </li>
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
                 <img src="./assets/images/parallel_icon.png"
                  alt="design icon" width="40">
               </div>
@@ -223,6 +239,7 @@
                   Speed up existing pipelines through parallelization and optimization.
                 </p>
               </div>
+            </li>
 
             <li class="service-item">
 
