--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/ML Image.PNG"
+                <img src="./assets/images/ML Image.png"
                  alt="design icon" width="40">
               </div>
 
@@ -285,22 +285,6 @@
 
                 <p class="service-item-text">
                   Professional development of applications for iOS and Android.
-                </p>
-              </div>
-
-            </li>
-
-            <li class="service-item">
-
-              <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
-              </div>
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Photography</h4>
-
-                <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
                 </p>
               </div>
 
