fixed the image

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What I can do for you</h3>
+          <h3 class="h3 service-title">My Expertise</h3>
 
           <ul class="service-list">
 
