--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/ML Image.png"
+                <img src="./assets/images/ML_Image.png"
                  alt="design icon" width="40">
               </div>
 
