--- a/index.html
+++ b/index.html
@@ -228,6 +228,22 @@
             <li class="service-item">
 
               <div class="service-icon-box">
+                <img src="./assets/images/statistics_image.png"
+                 alt="design icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Statistical Modeling and Analysis</h4>
+
+                <p class="service-item-text">
+                  Data talks even though we can't always understand it. I can help you make sense of your data through statistical modeling and analysis.
+                </p>
+              </div>
+            </li>
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
                 <img src="./assets/images/parallel_icon.png"
                  alt="design icon" width="40">
               </div>
