added research image

--- a/index.html
+++ b/index.html
@@ -224,11 +224,26 @@
                 </p>
               </div>
             </li>
+             <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/statistics_image.png"
+                 alt="design icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Research</h4>
+
+                <p class="service-item-text">
+                  Staying up to date on the latest research is key to solving complex problems. I'm experienced conducting literature reviews, designing experiments, and writing.
+                </p>
+              </div>
+            </li>
 
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/statistics_image.png"
+                <img src="./assets/images/research_image.png"
                  alt="design icon" width="40">
               </div>
 
