added 2 new filter buttons

--- a/index.html
+++ b/index.html
@@ -774,6 +774,13 @@
               <button data-filter-btn>Web development</button>
             </li>
 
+            <li class="filter-item">
+              <button data-filter-btn>Publications</button>
+            </li>
+            <li class="filter-item">
+              <button data-filter-btn>Features</button>
+            </li>
+
           </ul>
 
           <div class="filter-select-box">
