--- a/index.html
+++ b/index.html
@@ -813,6 +813,14 @@
                 <button data-select-item>Web development</button>
               </li>
 
+              <li class="select-item">
+                <button data-select-item>Publications</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>Features</button>
+              </li>
+
             </ul>
 
           </div>
