--- a/index.html
+++ b/index.html
@@ -845,6 +845,23 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://github.com/lddavila/upload_to_harvard_dataverse">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Lab.JPG" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Data Upload App</h3>
+
+                <p class="project-category">Applications</p>
+
+              </a>
+            </li>
    
 
           </ul>
