added app to portfolio

--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Lab.JPG" alt="finance" loading="lazy">
+                  <img src="./assets/images/dataverse.jpg" alt="finance" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Data Upload App</h3>
