--- a/index.html
+++ b/index.html
@@ -880,6 +880,96 @@
 
               </a>
             </li>
+
+            <li class="project-item  active" data-filter-item data-category="Publications">
+              <a href="https://github.com/lddavila/upload_to_harvard_dataverse">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/RECORD.jpg" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">RECORD</h3>
+
+                <p class="project-category">Publications</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="Publications">
+              <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC11463443/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Acute_alcohol.png" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Acute Alcohol Consumption</h3>
+
+                <p class="project-category">Publications</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="Publications">
+              <a href="https://www.nature.com/articles/s41467-025-61466-x">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Screenshot-2025-10-10 175117.png" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Decision-Making Space Models</h3>
+
+                <p class="project-category">Publications</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="Publications">
+              <a href="https://www.cell.com/cell-reports-methods/fulltext/S2667-2375(25)00182-1">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Screenshot-2025-10-10 175352.png" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Implants</h3>
+
+                <p class="project-category">Publications</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="Publications">
+              <a href="https://www.biorxiv.org/content/10.1101/2024.12.09.627657v1">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Screenshot-2025-10-10 175609" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">RECORD</h3>
+
+                <p class="project-category">Publications</p>
+
+              </a>
+            </li>
    
 
           </ul>
