--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="Features">
               <a href="https://www.nsf.gov/news/making-strides-understanding-decision-making#image-caption-credit-block">
 
                 <figure class="project-img">
