--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@
                   <img src="./assets/images/Screenshot-2025-10-10 175609" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">RECORD</h3>
+                <h3 class="project-title">Translational Science</h3>
 
                 <p class="project-category">Publications</p>
 
