added reinforcement learning to portfolio and fixed image path

--- a/index.html
+++ b/index.html
@@ -781,6 +781,10 @@
               <button data-filter-btn>Features</button>
             </li>
 
+            <li class="filter-item">
+              <button data-filter-btn>Machine Learning & A.I.</button>
+            </li>
+
           </ul>
 
           <div class="filter-select-box">
@@ -821,6 +825,9 @@
                 <button data-select-item>Features</button>
               </li>
 
+              <li class="select-item">
+                <button data-select-item>Machine Learning & A.I.</button>
+              </li>
             </ul>
 
           </div>
@@ -961,16 +968,33 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Screenshot-2025-10-10 175609" alt="finance" loading="lazy">
+                  <img src="./assets/images/Screenshot-2025-10-10 175609.png" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Translational Science</h3>
+                <h3 class="project-title">Computational Primitives</h3>
 
                 <p class="project-category">Publications</p>
 
               </a>
             </li>
    
+            <li class="project-item  active" data-filter-item data-category="Machine Learning & A.I.">
+              <a href="https://github.com/lddavila/clustering_neuron_spikes_with_deep_learning/tree/main/Q_Learning_agent">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/grid_world.png" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Reinforcement Learning</h3>
+
+                <p class="project-category">Machine Learning & A.I.</p>
+
+              </a>
+            </li>
 
           </ul>
 
